--- a/etc/adj.conf
+++ b/etc/adj.conf
@@ -6,7 +6,7 @@
 #
 
 alsa_name     adj
-alsa_sync     false
+alsa_sync     true
 keyb_in       true
 midi_in       nanoKONTROL Studio:nanoKONTROL Studio MIDI 1
 midi_out      TR-6S:TR-6S MIDI 1    
