--- a/etc/adj-dist.conf
+++ b/etc/adj-dist.conf
@@ -6,13 +6,66 @@
 # turn on visible whitespace in your editor
 #
 
+#
+# name that appear in alsa tools e.g. `aconnect -l`
+#
 alsa_name     adj
+
+#
+# Use Alsa buildin sync for the main libcdj loop.
+# This is necessary for CDJ mixing, potentially very slow hardware might benefit from turning this off
+#
 alsa_sync     false
+
+#
+# Keyboard input
+#
 keyb_in       true
+
+#
+# Number pad input
+#
+numpad_in       true
+
+#
+# Midi conroller input, name must be identical to how alsa sees it, check `aconnect -l`
+# N.B. whitespace is significant and left trimmed only
+#
 #midi_in       nanoKONTROL Studio:nanoKONTROL Studio MIDI 1
+
+#
+# Midi device/instrument to control
+#
 #midi_out      TR-6S:TR-6S MIDI 1    
+
+#
+# BPM on startup, natrually this is variable at runtime.
+#
 bpm           120
+
+#
+# vdj config - Virtual CDJ setting.
+#
+
+#
+# Enable a VDJ and connect to other Pioneer decks
+#
 #vdj           true
+
+#
+# The interface/NIV/network card on which other deck are available
+# if blank, adj looks to see if there is only one physical non-wifi card,
+# and if there is it uses that.
+#
 #vdj_iface     enp0s31f6
+
+#
+# Player ID, there can be only 4 players on the network usually.
+# if this is not a number, libcdj will try to auto assign an ID, checking with other players on the network.
+#
 #vdj_player    auto
+
+#
+# default offset/diff for midi locking to decks
+#
 #vdj_offset    +20
