--- a/etc/adj.conf
+++ b/etc/adj.conf
@@ -2,12 +2,14 @@
 #
 # AlsaDJ defaults
 #
-# N.B. whitespace is significant due to alsa bugs
+# N.B. whitespace is significant due to alsa bugs, all values left trimmed only
+# booleans are t[rue] or f[alse]
 #
 
 alsa_name     adj
 alsa_sync     true
 keyb_in       true
+numpad_in     false
 midi_in       nanoKONTROL Studio:nanoKONTROL Studio MIDI 1
 midi_out      TR-6S:TR-6S MIDI 1    
 bpm           120
