--- a/etc/adj-dist.conf
+++ b/etc/adj-dist.conf
@@ -12,7 +12,7 @@
 alsa_name     adj
 
 #
-# Use Alsa buildin sync for the main libcdj loop.
+# Use Alsa built in synchronization for the main libcdj loop.
 # This is necessary for CDJ mixing, potentially very slow hardware might benefit from turning this off
 #
 alsa_sync     false
@@ -34,12 +34,12 @@ numpad_in       true
 #midi_in       nanoKONTROL Studio:nanoKONTROL Studio MIDI 1
 
 #
-# Midi device/instrument to control
+# Midi device/instrument to control, N.B. significant whitespace
 #
 #midi_out      TR-6S:TR-6S MIDI 1    
 
 #
-# BPM on startup, natrually this is variable at runtime.
+# BPM on startup, naturally this is variable at runtime.
 #
 bpm           120
 
@@ -53,7 +53,7 @@ bpm           120
 #vdj           true
 
 #
-# The interface/NIV/network card on which other deck are available
+# The interface/NIC/network card on which other CDJs are available
 # if blank, adj looks to see if there is only one physical non-wifi card,
 # and if there is it uses that.
 #
